# python-project-52

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
task_manager/: forms.py  settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/status/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py  0002_rename_value_status_name_status_created_at.py
task_manager/templates/: base.html  create_user.html  hello.html  login.html  main.html  update_user.html
task_manager/templates/status/: create.html  delete.html  statuses.html  update.html
task_manager/templates/user/: delete_user.html  update_user.html  users.html
task_manager/tests/: test_views.py
task_manager/user/: forms.py  tests.py  urls.py  views.py
