[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"
django-bootstrap4 = "^22.3"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
coverage = "^7.1.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
